edited the error pages

--- a/public/422.html
+++ b/public/422.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>The change you wanted was rejected (422)</title>
+  <title>このページは表示できません</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <style>
   .rails-default-error-page {
@@ -58,10 +58,10 @@
   <!-- This file lives in public/422.html -->
   <div class="dialog">
     <div>
-      <h1>The change you wanted was rejected.</h1>
-      <p>Maybe you tried to change something you didn't have access to.</p>
+      <h1>ご不便をおかけし、申し訳ございません。</h1>
+      <p>正常に表示されるように解決に取り組んでいます。</p>
     </div>
-    <p>If you are the application owner check the logs for more information.</p>
+    <p>今しばらくお待ちください。</p>
   </div>
 </body>
 </html>
