--- a/public/404.html
+++ b/public/404.html
@@ -63,5 +63,8 @@
     </div>
     <p>アクセスしようとしたファイルが存在しないかもしれません。</p>
   </div>
+  <div class="error">
+    <img src="/404.png">
+  </div>
 </body>
 </html>
