--- a/public/500.html
+++ b/public/500.html
@@ -62,5 +62,8 @@
     </div>
     <p>正常に表示されるように解決に取り組んでいます。</p>
   </div>
+  <div class="error">
+    <img src="/500.png">
+  </div>
 </body>
 </html>
